hphp/test/zend/good/ext/mysqli/tests/mysqli_set_charset.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

if (version_compare(PHP_VERSION, '5.9.9', '>') == 1) {
	die('skip set character set not functional with PHP 6 (fomerly PHP 6 && unicode.semantics=On)');
}

if (!function_exists('mysqli_set_charset'))
 	die("skip Function not available");

require_once('connect.inc');
if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket))
	die(sprintf("skip Cannot connect, [%d] %s", mysqli_connect_errno(), mysqli_connect_error()));

if (!($res = mysqli_query($link, 'SELECT version() AS server_version')) ||
		!($tmp = mysqli_fetch_assoc($res))) {
	mysqli_close($link);
	die(sprintf("skip Cannot check server version, [%d] %s\n",
	mysqli_errno($link), mysqli_error($link)));
}
mysqli_free_result($res);
$version = explode('.', $tmp['server_version']);
if (empty($version)) {
	mysqli_close($link);
	die(sprintf("skip Cannot check server version, based on '%s'",
		$tmp['server_version']));
}

if ($version[0] <= 4 && $version[1] < 1) {
	mysqli_close($link);
	die(sprintf("skip Requires MySQL Server 4.1+\n"));
}

if ((($res = mysqli_query($link, 'SHOW CHARACTER SET LIKE "latin1"', MYSQLI_STORE_RESULT)) &&
		(mysqli_num_rows($res) == 1)) ||
		(($res = mysqli_query($link, 'SHOW CHARACTER SET LIKE "latin2"', MYSQLI_STORE_RESULT)) &&
		(mysqli_num_rows($res) == 1))
		) {
	// ok, required latin1 or latin2 are available
	mysqli_close($link);
} else {
	die(sprintf("skip Requires character set latin1 or latin2\n"));
	mysqli_close($link);
}
?>