hphp/test/zend/bad/ext/mysql/tests/mysql_set_charset.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');

if (version_compare(PHP_VERSION, '5.9.9', '>') == 1) {
	die('skip set character set not functional with PHP 6 (fomerly PHP 6 && unicode.semantics=On)');
}

if (!function_exists('mysql_set_charset'))
	die("skip Function not available");
?>